# CUBd

./: CMakeLists.txt  README.md  cubd.cpp  cubd.cu  cubd.h  cubd.sln  cubd.vcxproj  cubd.vcxproj.filters  cuda_util.h  main.cpp
direct_use/: CMakeLists.txt  direct_use.vcxproj  direct_use.vcxproj.filters
dynamic_link/: CMakeLists.txt  dynamic_link.vcxproj  dynamic_link.vcxproj.filters
libcubd/: CMakeLists.txt  libcubd.vcxproj  libcubd.vcxproj.filters
libcubd_static/: CMakeLists.txt  libcubd_static.vcxproj  libcubd_static.vcxproj.filters
static_link/: CMakeLists.txt  static_link.vcxproj  static_link.vcxproj.filters
